# kinematic_factor

./: README.md
compute_Kfactors/: Makefile.in  README  README.md  configure  configure.ac  kinematic_factors_notes.tex
compute_Kfactors/autom4te.cache/: output.1  output.4  requests  traces.0  traces.1  traces.3  traces.4
compute_Kfactors/dump/: Makefile.am  k_factor.h  phase.cc  redstar_intrfc.cc  subd_pol_vec_old.cc  subd_pol_vec_old.h
compute_Kfactors/dump/test/: ckfac_w_sud.cc  compute_kfactors.cc  compute_kfactors_with_phases_j0.cc  extract_ph.cc  test_phase.cc  witout_pol.cc
compute_Kfactors/notes/: kinematic_factors_notes.aux  kinematic_factors_notes.tex
compute_Kfactors/plotting_scripts/: plot_phase_space.py
compute_Kfactors/src/: .main.cc.swo  Makefile.am  Makefile.in  TO_DO  configure.ac  irreps_and_rows.cc  irreps_and_rows.h  k_factor.cc  k_factor.h  kfac_utils.cc  kfac_utils.h  levi_civita.cc  main.cc  phase.cc  phase.h  pol_vec.cc  pol_vec.h  subduction.cc  subduction.h
compute_Kfactors/src/autom4te.cache/: output.0  traces.2
compute_Kfactors/src/exe/: compute_kf.cc  compute_kfactors.cc  compute_kfactors.corr.cc  compute_kfactors_j0.cc  compute_kfactors_with_phases.cc  compute_matrix_prefactor.cc  main.cc
compute_Kfactors/src/ini.xml/: README  compute_pref.ini.xml  gen_redstar.ini.xml
compute_Kfactors/src/io/: README  compute_kfactor_xml_read_write.cc  compute_kfactor_xml_read_write.h  gen_ini_xml.cc  gen_redstar_xml.cc  gen_redstar_xml.h  hadron_3pt.xml.cc  hadron_3pt.xml.h  redstar_intr.cc  redstar_intrfc.cc  xml_tools.cc
compute_Kfactors/src/lib/: compute_three_point_prefactor.cc  compute_three_point_prefactor.h  irreps_and_rows.cc  irreps_and_rows.h  iterate.cc  iterate.h  k_factor_factory.cc  k_factor_factory.h  kfac_params.cc  kfac_params.h  kfac_utils.cc  kfac_utils.h  kfactor_pigammapi.cc  kfactor_pigammapi.h  kfactor_pigammarho.cc  kfactor_pigammarho.h  kfactors.h  levi_civita.cc  levi_civita.h  little_group.cc  little_group.h  naming.cc  naming.h  phase.cc  phase.h  pol_vec.cc  pol_vec.h  rot_matrx.cc  rot_matrx.h  subd_pol_vec.cc  subd_pol_vec.h  subduction.cc  subduction.h
compute_Kfactors/src/out.xml/: README  compute_pref.out.xml  gen_redstar_xml.out.xml  kpi_3pt.xml
compute_Kfactors/src/src/: Makefile.am  Makefile.in
compute_Kfactors/src/src/ini.xml/: hadron.xml
compute_Kfactors/src/src/io/: gen_redstar_xml.cc  redstar_intrfc.cc
compute_Kfactors/src/src/lib/: k_factor.cc  k_factor.h  kfac_utils.h  kfactors.h  rot_matrx.h  subduction.cc
compute_Kfactors/src/src/test/: compute_kfactors.cc  compute_kfactors_with_phases.cc  extract_ph.cc  tes_ph.cc  test_alr.cc  witout_pol.cc
compute_Kfactors/src/test/: extract_ph.cc  tes_ph.cc
documentation/html/: annotated.html  classes.html  dir_000004_000006.html  dir_000005_000006.html  dir_000006_000005.html  dir_000011_000033.html  dir_000012_000033.html  dir_000054_000056.html  dir_000055_000056.html  dir_000056_000060.html  dir_000056_000062.html  dir_000059_000056.html  dir_000059_000060.html  dir_000062_000056.html  dir_000090_000093.html  dir_000096_000093.html  dir_000099_000094.html  dir_000110_000109.html  dir_000342f69cb038d9be83f88799e60214.html  dir_000e0b6c9efc76c8abcef2e33b347ba4.html  dir_01af2cb593be1d827a8735d6e91ba705.html  dir_02c964aa9f96b8c77da160700c89f5cf.html  dir_04d605f16ba380fd1fa7b2f020b0bc1d.html  dir_05ae66b96f726387a8e47ba3e3f3fb39.html  dir_08453b4fe33b39fa323cb6761f1d298b.html  dir_0b6ee7146886f742db72b4757d1161d8.html  dir_0cccc73d6ba1c33f249f519673c20a8f.html  dir_0cccc73d6ba1c33f249f519673c20a8f_dep.map  dir_0cccc73d6ba1c33f249f519673c20a8f_dep.md5  dir_0ce317d50dcb14c610575d308df1f98f.html  dir_0ede3b53efd3ed6c5fcc4dcacf292b20.html  dir_0ede3b53efd3ed6c5fcc4dcacf292b20_dep.map  dir_0ede3b53efd3ed6c5fcc4dcacf292b20_dep.md5  dir_0f3fccb91a6468d2ff0212662298dd13.html  dir_10bc65a5e29b8271e55b768664762deb.html  dir_10f2e167b72776fcd75641213417cae0.html  dir_11a33c89ee447541e5300803e65c1752.html  dir_12ac3e0d0a0f1a1b3667042e31d4497a.html  dir_1456210e681d7012a8014da2c0fd049c.html  dir_153d0a48a5a6a8551e4dee690f7b8b05.html  (+3439 more)
documentation/latex/: annotated.tex  dir_000342f69cb038d9be83f88799e60214.tex  dir_000e0b6c9efc76c8abcef2e33b347ba4.tex  dir_01af2cb593be1d827a8735d6e91ba705.tex  dir_02c964aa9f96b8c77da160700c89f5cf.tex  dir_04d605f16ba380fd1fa7b2f020b0bc1d.tex  dir_05ae66b96f726387a8e47ba3e3f3fb39.tex  dir_08453b4fe33b39fa323cb6761f1d298b.tex  dir_0b6ee7146886f742db72b4757d1161d8.tex  dir_0cccc73d6ba1c33f249f519673c20a8f.tex  dir_0cccc73d6ba1c33f249f519673c20a8f_dep.md5  dir_0ce317d50dcb14c610575d308df1f98f.tex  dir_0ede3b53efd3ed6c5fcc4dcacf292b20.tex  dir_0ede3b53efd3ed6c5fcc4dcacf292b20_dep.md5  dir_0f3fccb91a6468d2ff0212662298dd13.tex  dir_10bc65a5e29b8271e55b768664762deb.tex  dir_10f2e167b72776fcd75641213417cae0.tex  dir_11a33c89ee447541e5300803e65c1752.tex  dir_12ac3e0d0a0f1a1b3667042e31d4497a.tex  dir_1456210e681d7012a8014da2c0fd049c.tex  dir_153d0a48a5a6a8551e4dee690f7b8b05.tex  dir_1554c471aa2d386b10785662a06c2a49.tex  dir_1686dc006ae22898a509cef15acb2edf.tex  dir_17bc6bec7ff8949176d7b9d6fc733ebe.tex  dir_18cc1547343a90ba9faa557d14470853.tex  dir_1b6163b8216e168be7499c12236087ee.tex  dir_1bbc2c4eb4550cfd1c11efc480f4ae81.tex  dir_1dd55a7bdcec42707a5191aed16c948a.tex  dir_1e11cf1dd932dfcb6600bb5d826c91f5.tex  dir_20cf3425b6e67692cb012549a8d8651d.tex  dir_2142fcf964fefde6ac7f6c29d6998d27.tex  dir_222ecad6c743442006731d7c1cd84645.tex  dir_2238b27f98414b0ca401ff6198022d47.tex  dir_230d99c8fdd17cad8eac64307402998c.tex  dir_2382b301de5c802ab2d873e1b6bede86.tex  (+148 more)
dump/: compute_kf.cc  compute_matrix_prefactor.cc  compute_matrix_prefactor_pigamma_to_rho_conven.cc  gen_ini_xml.cc  k_factor.cc  k_factor.h  kfactors.h  main.cc
dump/test/: tes_ph.cc  (+4 more)
src/: Makefile.am  Makefile.in
src/exe/: compute_kfactors_j0.cc  compute_kfactors_with_phases_j0.cc
src/io/: hadron_3pt.xml.h  redstar_intrfc.cc  xml_tools.cc
src/lib/: k_factor.cc  k_factor.h  kfactors.h  phase.cc  rot_mat.cc  rot_matrx.cc  subduction.cc
src/test/: tes_ph.cc  test_phase.cc
(+36522 files in other folders)
